updated NLPProcessor constructor